[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Bird.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Pipes.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/World.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Platform.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/0.png" type="Texture" id=5]
[ext_resource path="res://sprites/1.png" type="Texture" id=6]
[ext_resource path="res://sprites/background-day.png" type="Texture" id=7]

[node name="World" type="Node2D"]
position = Vector2( 122, 365 )
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 109.0
margin_top = 412.0
margin_right = 149.0
margin_bottom = 452.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="Pipes" parent="." instance=ExtResource( 2 )]
position = Vector2( 262, -41 )
__meta__ = {
"_edit_group_": true
}

[node name="Bird" parent="." instance=ExtResource( 1 )]
position = Vector2( 60, -12 )

[node name="Label" type="Label" parent="."]
margin_left = 94.0
margin_top = -222.0
margin_right = 137.0
margin_bottom = -208.0
text = "0"

[node name="Platform" parent="." instance=ExtResource( 4 )]
position = Vector2( -122, -364 )
z_index = 100

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 61, -15 )
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 118, 501 )
motion_mirroring = Vector2( 200, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 122, -211 )
scale = Vector2( 1.65278, 1.01562 )
texture = ExtResource( 7 )

[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="game_over" from="Bird" to="." method="_on_Bird_game_over"]
